--- a/index.html
+++ b/index.html
@@ -815,6 +815,7 @@ function callUpdate(new_strand, reversed_dna, j, end) {
 		<h1 class="page_head">Generate Config File</h1>
 			<form id="config_form">
 			  <div id="config_header">
+			    <img src="../figures/splitcode_logo.png" height="100px" style="float: right" />
 			    <p><label for="nFastqs">Number of FASTQ file(s) per run: </label><input type="number" value="1" min="1" max="99" id="nFastqs" name="nFastqs" /> <span>(e.g. specify 2 for paired-end)</span></p>
 			    <div>
 			      <!--<p><label for="extraction_name">Extraction: </label><input type="text" value="" id="extraction_name" placeholder="Extraction identifier " /></p>
@@ -908,7 +909,7 @@ function callUpdate(new_strand, reversed_dna, j, end) {
 		</div>
 		</div>
 		<div id="footer">
-			Site designed by Delaney Sullivan
+			Sullivan DK, Pachter L. (2023) splitcode. http://github.com/pachterlab/splitcode.
 		</div>
 	</div>
 	
