--- a/index.html
+++ b/index.html
@@ -452,6 +452,10 @@ function callUpdate(new_strand, reversed_dna, j, end) {
 		        return ["The following name does not exist: \"" + tag_extract_name + "\""];
 		      }
 		    }
+                    if (name == "final_barcodes") {
+		      success = false;
+		      return ["The following name is not permitted: \"" + name + "\""];
+		    }
 		    if (name != "") {
 		      files.push(name);
 		    }
@@ -835,7 +839,7 @@ function callUpdate(new_strand, reversed_dna, j, end) {
 		<h1 class="page_head">Generate Config File</h1>
 			<form id="config_form">
 			  <div id="config_header">
-			    <img src="https://raw.githubusercontent.com/pachterlab/splitcode/main/figures/splitcode_logo.png" height="125px" style="float: right" />
+			    <img src="https://raw.githubusercontent.com/pachterlab/splitcode/main/figures/splitcode_logo.png" height="130px" style="float: right" />
 			    <p><label for="nFastqs">Number of FASTQ file(s) per run: </label><input type="number" value="1" min="1" max="99" id="nFastqs" name="nFastqs" /> <span>(e.g. specify 2 for paired-end)</span></p>
 			    <div>
 			      <!--<p><label for="extraction_name">Extraction: </label><input type="text" value="" id="extraction_name" placeholder="Extraction identifier " /></p>
@@ -1137,6 +1141,7 @@ if (!use_pipe) {
     out += '<label for="output_outb">Output: ' + "final_barcodes.fastq" + '</label>';
     out += '<textarea class="emscripten" id="output_outb" rows="8" readonly="readonly"></textarea>';
   }
+  var xfiles = getExtractFiles();
   for (var i = 0; i < l; i++) {
     out += '<label for="output_' + i + '">Output: ' + "out_" + mainfiles[i] + '</label>';
     out += '<textarea class="emscripten" id="output_' + i + '" rows="8" readonly="readonly"></textarea>';
