--- a/index.html
+++ b/index.html
@@ -1187,6 +1187,7 @@ if (!use_pipe) {
     out += '<label for="output_mapping">Output: ' + "mapping.txt" + '</label>';
     out += '<textarea class="emscripten" id="output_mapping" rows="4" readonly="readonly"></textarea>';
     $("#output_file_output").html(out);
+    $("#output_" + "mapping").val(FS.readFile("mapping.txt", { encoding: 'utf8' }));
     $("#output_file_output").show();
   }
 }
