--- a/index.html
+++ b/index.html
@@ -863,11 +863,11 @@ function callUpdate(new_strand, reversed_dna, j, end) {
 			  <div id="config">
 			    <table id="activity_1" class="config_table">
 			      <tr class="table_header">
-			        <th rowspan="2">tags</th>
-			        <th rowspan="2">ids</th>
-			        <th rowspan="2">groups</th>
-			        <th colspan="3">distances (error tolerance)</th>
-			        <th colspan="3">locations</th>
+			        <th rowspan="2">tag</th>
+			        <th rowspan="2">id</th>
+			        <th rowspan="2">group</th>
+			        <th colspan="3">distance (error tolerance)</th>
+			        <th colspan="3">location</th>
 			        <th rowspan="2">minFinds</th>
 			        <th rowspan="2">maxFinds</th>
 			        <th rowspan="2">initiator</th>
@@ -877,7 +877,7 @@ function callUpdate(new_strand, reversed_dna, j, end) {
 			        <th rowspan="2" colspan="2">right<span style="font-weight: normal"> (trim)</span></th>
 			        <th rowspan="2">next</th>
 			        <th rowspan="2">previous</th>
-			        <th rowspan="2">subs</th>
+			        <th rowspan="2">sub</th>
 			        <th colspan="2">partial5</th>
 			        <th colspan="2">partial3</th>
 			      </tr>
